--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,47 @@
-name: Deploy to Azure using Docker Hub
+# name: Deploy to Azure using Docker Hub
+
+# on:
+#   push:
+#     branches:
+#       - master
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     # Checkout code
+#     - name: Checkout code
+#       uses: actions/checkout@v3
+
+#     # Log in to Docker Hub
+#     - name: Log in to Docker Hub
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+
+#     # Build and push Docker image
+#     - name: Build and push Docker image to Docker Hub
+#       run: |
+#         docker build -t ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest .
+#         docker push ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
+
+#     # Deploy to Azure Virtual Machine
+#     - name: Deploy to Azure VM
+#       run: |
+#         sshpass -p "${{ secrets.VM_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << EOF
+#             docker pull ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
+#             docker stop my-html-app || true
+#             docker rm my-html-app || true
+#             docker run -d \
+#             --name my-html-app \
+#             -p 4000:4000 \
+#             ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
+#         EOF
+
+
+name: Deploy to AWS using Docker Hub
 
 on:
   push:
@@ -8,34 +51,37 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
     # Checkout code
     - name: Checkout code
       uses: actions/checkout@v3
-
+    
     # Log in to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-
+    
     # Build and push Docker image
     - name: Build and push Docker image to Docker Hub
       run: |
         docker build -t ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest .
         docker push ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
-
-    # Deploy to Azure Virtual Machine
-    - name: Deploy to Azure VM
-      run: |
-        sshpass -p "${{ secrets.VM_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.VM_USER }}@${{ secrets.VM_IP }} << EOF
-            docker pull ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
-            docker stop my-html-app || true
-            docker rm my-html-app || true
-            docker run -d \
-            --name my-html-app \
-            -p 4000:4000 \
-            ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
-        EOF
+    
+    # Deploy to AWS EC2 Instance
+    - name: Deploy to AWS EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: 18.216.140.24
+        username: dennis
+        password: 12345678
+        script: |
+          docker pull ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
+          docker stop my-html-app || true
+          docker rm my-html-app || true
+          docker run -d \
+          --name my-html-app \
+          -p 4000:4000 \
+          ${{ secrets.DOCKER_USERNAME }}/my-html-app:latest
